left align b in logo with other text and bug fix

--- a/app/assets/stylesheets/base/layouts/_public.css.scss
+++ b/app/assets/stylesheets/base/layouts/_public.css.scss
@@ -13,7 +13,6 @@
 
       width: 100%;
       height: 60px;
-      padding: 4px 10%;
 
       background-color: white; /* This ensures it has a sane bg as it starts to be on top of random content. */
       border-bottom: solid 1px #f0f0f0; /* And just gives gives a very subtle separation that doesn't visually stand out, but does help to keep partially obscured text underneath as you scroll through a half-line look less sloppy. */
@@ -23,7 +22,6 @@
       padding: 0px;
       img {
         max-height: 60px;
-        display: inline;
       }
     }
 
@@ -78,6 +76,9 @@
 #banner .top-left img {
   z-index: 12; /* puts it on top of the image below */
   position: relative; /* needed for z-index to take effect */
+  @media screen and (min-width: $screen-sm-max) {
+    display: inline; /* On non-small screens, we want it to be left-aligned like the other text */
+  }
 }
 
 .should-overlap-logo {
